started to documentation for fish loot pool